
FIND_PACKAGE(VTK REQUIRED)
LINK_DIRECTORIES(${VTK_LIBRARY_DIRS})

SET(WRAPPER_LIBRARY_GROUPS
  itkImageToVTKImageFilter
  itkVTKImageToImageFilter
)

SET(WRAPPER_LIBRARY_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR}/source ${VTK_INCLUDE_DIRS})

WRAP_LIBRARY(ItkVtk)

SET(WRAPPER_LIBRARY_DEPENDS Base Transforms SimpleFilters)
SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon ITKBasicFilters vtkImaging vtkFiltering)
SET(WRAPPER_SWIG_LIBRARY_FILES "${CMAKE_CURRENT_SOURCE_DIR}/itkvtk.swg")

IF(WRAP_ITK_JAVA AND WRAPPER_LIBRARY_JAVA)
  SET(WRAP_ITK_JAVA_USER_CLASS_PATH "${WRAP_ITK_JAVA_USER_CLASS_PATH}${VTK_LIBRARY_DIRS}/vtk.jar")#use NO space
ENDIF(WRAP_ITK_JAVA AND WRAPPER_LIBRARY_JAVA)

WRAPPER_LIBRARY_CREATE_WRAP_FILES()
END_WRAP_LIBRARY()

